fix: gradient line overlapping nav text on mobile

--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -675,7 +675,7 @@ Header Style
     width: 100%;
   }
   .header-area {
-    background-color: #f7f7f7;
+    background: #f7f7f7;
     padding: 0px 15px;
     height: 100px;
     box-shadow: none;
